--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.8.0",
     "ai": "^2.2.31",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "lucide-react": "^0.308.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "openai": "^4.24.2",
@@ -22,7 +25,9 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.8.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
