--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.2",
     "@clerk/themes": "^1.7.9",
+    "@hookform/resolvers": "^3.3.4",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.8.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "init": "^0.1.2",
     "lucide-react": "^0.308.0",
+    "mongodb": "^6.3.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "openai": "^4.24.2",
@@ -26,8 +32,11 @@
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "shadcn-ui": "^0.6.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
